# Sturm

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp  sturm.cpp  sturm.h
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  codeql.yml
include/sturm/: sturm.hpp
src/: main.cpp  sturm.cpp
tests/: CMakeLists.txt  test_sturm.cpp
